--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
       </div>
     </nav>
     <div class="container home">
+      <section class="header-section">
+        <div class="header-img"></div>
+        <div class="header-content">
+          <h2>Welcome To Fun Bus!</h2>
+          <p>
+            Traveling expedition modern, clean web design blogger clean website
+            theme website moden. Design pretty design, travel blogger adventure
+            WordPress wanderlust theme blogger website expedition theme travel
+            blogger. Adventure fun traveler pretty design website expedition.
+          </p>
+        </div>
+      </section>
       <section class="content-section">
         <div class="text-content">
           <h2>Let's Go!</h2>
