Finished adding a contact form

--- a/index.html
+++ b/index.html
@@ -118,6 +118,33 @@
           <div class="btn">Sign Me Up!</div>
         </div>
       </section>
+      <section class="contact-container">
+        <h2 class="contact-us">Send Us A Message!</h2>
+        <form action="" class="contact-form">
+          <label for="name" class="name-label">Name</label><br />
+          <input type="text" class="name" name="name" /><br />
+          <label for="email" class="email-label">Email</label><br />
+          <input type="text" class="email" name="email" /><br />
+          <label for="vacation" class="company-label">Vacation</label><br />
+          <select name="vacations" id="vacation">
+            <option value="empty"></option>
+            <option value="Beach">Beach</option>
+            <option value="Cruise">Cruise</option>
+            <option value="Disneyland">Disneyland</option>
+            <option value="Hawaii">Hawaii</option>
+          </select>
+          <br />
+          <textarea
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            placeholder="Enter your message"
+          ></textarea
+          ><br />
+          <button>Send</button>
+        </form>
+      </section>
     </div>
     <!-- container -->
 
